--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -119,7 +119,7 @@ body {
 
 .btn-more:hover {
     background-color: #FF7E5F;
-    color: #f5f5f5;
+    color: #fff;
     box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.1);
     transition: 0.3s;
 }
